<resources>
    <string name="app_name">nyAhn_FileExplorer</string>
    <string name="title_main_page">파일 관리자</string>
    <string name="main_storage">내부 저장소</string>
    <string name="sdcard_storage">외부 저장소</string>
    <string name="app_storage">앱 저장소</string>
    <string name="cant_use">사용할 수 없음</string>

    <string name="empty_file_list">저장된 파일이 없습니다.</string>

    <!-- function -->
    <string name="file_rename">파일 이름 변경</string>
    <string name="file_delete">삭제</string>
    <string name="confirm_delete">%d개의 파일을 정말 삭제하시겠습니까?</string>
    <string name="file_copy">복사</string>
    <string name="file_move">이동</string>
    <string name="file_share">공유</string>
    <string name="file_more">더보기</string>
    <string name="file_paste">붙여넣기</string>

    <string name="file_info">상세 정보</string>
    <string name="file_name">이름</string>
    <string name="file_size">크기</string>
    <string name="file_last_modify">마지막 수정</string>
    <string name="file_sub_info">포함 항목</string>
    <string name="file_contents">폴더 %d개, 파일 %d개</string>
    <string name="file_count">%d개</string>
    <string name="file_path">경로</string>


    <string name="file_createFile">새 폴더</string>

    <string name="conn_other_app">다른 앱 연결하기</string>

    <!-- 폴더 생성 -->
    <string name="create_folder">폴더 이름</string>
    <string name="confirm">확인</string>
    <string name="cancel">취소</string>
    <string name="already_exist">대상이 이미 존재합니다.</string>

</resources>