<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    android:layout_alignParentBottom="true"
    android:gravity="center_vertical">

    <LinearLayout
        android:id="@+id/llFileCopy"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:onClick="onClickButton"
        android:layout_weight="1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textColor="?attr/bottomTextColor"
            android:text="@string/file_copy"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llFileMove"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:onClick="onClickButton"
        android:layout_weight="1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textColor="?attr/bottomTextColor"
            android:text="@string/file_move"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llFileRename"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:onClick="onClickButton"
        android:layout_weight="1">

        <TextView
            android:id="@+id/tvFileRename"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textColor="?attr/bottomTextColor"
            android:text="@string/file_rename"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llFileDelete"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:onClick="onClickButton"
        android:layout_weight="1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textColor="?attr/bottomTextColor"
            android:text="@string/file_delete"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llFileInfo"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:onClick="onClickButton"
        android:layout_weight="1">

        <TextView
            android:id="@+id/tvFileInfo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textColor="?attr/bottomTextColor"
            android:text="@string/file_info"/>

    </LinearLayout>
</LinearLayout>