<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/file_name"
            android:textAppearance="@style/TextSize.12sp"
            android:textColor="?android:attr/textColorHint"/>

        <TextView
            android:id="@+id/tvFileName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/file_name"
            android:textAppearance="@style/TextSize.18sp"
            android:textColor="?android:attr/textColor"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/file_size"
            android:textAppearance="@style/TextSize.12sp"
            android:textColor="?android:attr/textColorHint"/>

        <TextView
            android:id="@+id/tvFileSize"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/file_size"
            android:textAppearance="@style/TextSize.18sp"
            android:textColor="?android:attr/textColor"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/file_last_modify"
            android:textAppearance="@style/TextSize.12sp"
            android:textColor="?android:attr/textColorHint"/>

        <TextView
            android:id="@+id/tvFileModify"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/file_last_modify"
            android:textAppearance="@style/TextSize.18sp"
            android:textColor="?android:attr/textColor"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llFileSub"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/file_sub_dir_size"
            android:textAppearance="@style/TextSize.12sp"
            android:textColor="?android:attr/textColorHint"/>

        <TextView
            android:id="@+id/tvFileSub"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/file_sub_dir_size"
            android:textAppearance="@style/TextSize.18sp"
            android:textColor="?android:attr/textColor"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/file_path"
            android:textAppearance="@style/TextSize.12sp"
            android:textColor="?android:attr/textColorHint"/>

        <TextView
            android:id="@+id/tvFilePath"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/file_path"
            android:textAppearance="@style/TextSize.18sp"
            android:textColor="?android:attr/textColor"/>

    </LinearLayout>
</ScrollView>

