<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        layout="@layout/toolbar"
        android:id="@+id/toolbar"/>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/llMainStorage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="20dp">

            <ImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:background="@drawable/inbox"
                android:contentDescription="@string/main_storage"
                android:scaleType="fitCenter" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_storage"
                android:textColor="?android:attr/textColor" />

            <TextView
                android:id="@+id/tvInnerVolume"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Tiny"
                android:textColor="?android:attr/textColorHint"
                tools:text="@string/cant_use" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llSdcardStorage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_toEndOf="@+id/llMainStorage"
            android:padding="20dp">

            <ImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:scaleType="fitCenter"
                android:background="@drawable/sdcard"
                android:contentDescription="@string/sdcard_storage">
            </ImageView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="?android:attr/textColor"
                android:text="@string/sdcard_storage">
            </TextView>
            <TextView
                android:id="@+id/tvSdcardVolume"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Tiny"
                android:textColor="?android:attr/textColorHint"
                android:text="@string/cant_use"/>
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>